--- a/locale/lt/LC_MESSAGES/django.po
+++ b/locale/lt/LC_MESSAGES/django.po
@@ -153,15 +153,6 @@ msgstr "Registruotis"
 msgid "Are you sure you want to sign out?"
 msgstr ""
 
-#: .\templates\account\logout.html:29 .\templates\boards\board_detail.html:169
-#: .\templates\boards\board_detail.html:247
-#: .\templates\boards\board_edit.html:24
-#: .\templates\boards\task_confirm_delete.html:88
-#: .\templates\boards\task_form.html:82 .\templates\teams\team_detail.html:148
-#: .\templates\teams\team_detail.html:203 .\templates\teams\team_list.html:138
-msgid "Cancel"
-msgstr "Atšaukti"
-
 #: .\templates\account\password_reset.html:5
 #: .\templates\account\password_reset.html:16
 #: .\templates\account\password_reset_done.html:4
@@ -401,14 +392,10 @@ msgid "Board"
 msgstr "Lentos"
 
 #: .\templates\boards\board_detail.html:23
-#, fuzzy
-#| msgid "Member"
 msgid "Add Member"
-msgstr "Narys"
+msgstr "Pridėti narį"
 
 #: .\templates\boards\board_detail.html:28
-#, fuzzy
-#| msgid "Team Information"
 msgid "Team Info"
 msgstr "Komandos informacija"
 
@@ -438,8 +425,6 @@ msgstr "Prašome įvesti užduoties pavadinimą."
 
 #: .\templates\boards\board_detail.html:147
 #: .\templates\boards\task_confirm_delete.html:45
-#, fuzzy
-#| msgid "Assigned to"
 msgid "Assigned To"
 msgstr "Priskirta"
 
@@ -449,8 +434,6 @@ msgstr ""
 
 #: .\templates\boards\board_detail.html:156
 #: .\templates\boards\task_confirm_delete.html:51
-#, fuzzy
-#| msgid "Due date"
 msgid "Due Date"
 msgstr "Terminas"
 
@@ -563,18 +546,11 @@ msgstr "Kol kas neturite komandų lentų."
 #: .\templates\boards\task_confirm_delete.html:4
 #: .\templates\boards\task_confirm_delete.html:13
 #: .\templates\boards\task_confirm_delete.html:91
-#, fuzzy
-#| msgid "Delete Team"
 msgid "Delete Task"
-msgstr "Ištrinti komandą"
+msgstr "Ištrinti užduotį"
 
 #: .\templates\boards\task_confirm_delete.html:19
-#, fuzzy, python-format
-#| msgid ""
-#| "\n"
-#| "                            Already have an account? Then please <a "
-#| "href=\"%(login_url)s\">sign in</a>.\n"
-#| "                            "
+#, python-format
 msgid ""
 "\n"
 "                            Are you sure you want to delete the task "
@@ -845,7 +821,7 @@ msgstr ""
 #, fuzzy
 #| msgid "Description"
 msgid "No description"
-msgstr "Aprašymas"
+msgstr "Nėra aprašymo"
 
 #: .\templates\teams\team_form.html:23 .\templates\teams\team_form.html:27
 msgid "Atšaukti"
@@ -964,7 +940,7 @@ msgid "Enter a valid value."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\core\validators.py:104
-#: .\venv\Lib\python3.12\site-packages\django\forms\fields.py:760
+#: .\venv\Lib\site-packages\django\forms\fields.py:760
 #: .\venv\Lib\site-packages\django\core\validators.py:104
 #: .\venv\Lib\site-packages\django\forms\fields.py:760
 msgid "Enter a valid URL."
@@ -1196,13 +1172,13 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1155
 #, python-format
 msgid ""
-"“%(value)s" value must be either True or False."
+"\"%(value)s" value must be either True or False."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:1156
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1156
 #, python-format
-msgid "“%(value)s" value must be either True, False, or None."
+msgid "\"%(value)s" value must be either True, False, or None."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:1158
@@ -1230,7 +1206,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1415
 #, python-format
 msgid ""
-"“%(value)s" value has an invalid date format. It must be in YYYY-MM-DD "
+"\"%(value)s" value has an invalid date format. It must be in YYYY-MM-DD "
 "format."
 msgstr ""
 
@@ -1240,7 +1216,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1554
 #, python-format
 msgid ""
-"“%(value)s" value has the correct format (YYYY-MM-DD) but it is an invalid "
+"\"%(value)s" value has the correct format (YYYY-MM-DD) but it is an invalid "
 "date."
 msgstr ""
 
@@ -1253,7 +1229,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1550
 #, python-format
 msgid ""
-"“%(value)s" value has an invalid format. It must be in YYYY-MM-DD "
+"\"%(value)s" value has an invalid format. It must be in YYYY-MM-DD "
 "HH:MM[:ss[.uuuuuu]][TZ] format."
 msgstr ""
 
@@ -1261,7 +1237,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1558
 #, python-format
 msgid ""
-"“%(value)s" value has the correct format (YYYY-MM-DD HH:MM[:ss[.uuuuuu]]"
+"\"%(value)s" value has the correct format (YYYY-MM-DD HH:MM[:ss[.uuuuuu]]"
 "[TZ]) but it is an invalid date/time."
 msgstr ""
 
@@ -1273,7 +1249,7 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:1690
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1690
 #, python-format
-msgid "“%(value)s" value must be a decimal number."
+msgid "\"%(value)s" value must be a decimal number."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:1692
@@ -1285,7 +1261,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1853
 #, python-format
 msgid ""
-"“%(value)s" value has an invalid format. It must be in [DD] "
+"\"%(value)s" value has an invalid format. It must be in [DD] "
 "[[HH:]MM:]ss[.uuuuuu] format."
 msgstr ""
 
@@ -1309,7 +1285,7 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:2012
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:2012
 #, python-format
-msgid "“%(value)s" value must be a float."
+msgid "\"%(value)s" value must be a float."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:2014
@@ -1320,7 +1296,7 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:2054
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:2054
 #, python-format
-msgid "“%(value)s" value must be an integer."
+msgid "\"%(value)s" value must be an integer."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:2056
@@ -1353,7 +1329,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:2301
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:2302
 #, python-format
-msgid "“%(value)s" value must be either None, True or False."
+msgid "\"%(value)s" value must be either None, True or False."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:2304
@@ -1391,7 +1367,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:2512
 #, python-format
 msgid ""
-"“%(value)s" value has an invalid format. It must be in HH:MM[:ss[.uuuuuu]] "
+"\"%(value)s" value has an invalid format. It must be in HH:MM[:ss[.uuuuuu]] "
 "format."
 msgstr ""
 
@@ -1399,7 +1375,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:2516
 #, python-format
 msgid ""
-"“%(value)s" value has the correct format (HH:MM[:ss[.uuuuuu]]) but it is an "
+"\"%(value)s" value has the correct format (HH:MM[:ss[.uuuuuu]]) but it is an "
 "invalid time."
 msgstr ""
 
@@ -1421,7 +1397,7 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:2717
 #: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:2717
 #, python-format
-msgid "“%(value)s" is not a valid UUID."
+msgid "\"%(value)s" is not a valid UUID."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\db\models\fields\__init__.py:2719
@@ -1686,7 +1662,7 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\forms\models.py:1587
 #: .\venv\Lib\site-packages\django\forms\models.py:1587
 #, python-format
-msgid "“%(pk)s" is not a valid value."
+msgid "\"%(pk)s" is not a valid value."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\forms\utils.py:227
@@ -1709,8 +1685,6 @@ msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\forms\widgets.py:463
 #: .\venv\Lib\site-packages\django\forms\widgets.py:463
-#, fuzzy
-#| msgid "Save Changes"
 msgid "Change"
 msgstr "Išsaugoti pakeitimus"
 
@@ -1799,8 +1773,6 @@ msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\utils\dateformat.py:153
 #: .\venv\Lib\site-packages\django\utils\dateformat.py:153
-#, fuzzy
-#| msgid "Light"
 msgid "midnight"
 msgstr "Šviesi"
 
@@ -1871,8 +1843,6 @@ msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\utils\dates.py:21
 #: .\venv\Lib\site-packages\django\utils\dates.py:21
-#, fuzzy
-#| msgid "Status"
 msgid "Sat"
 msgstr "Būsena"
 
@@ -1903,9 +1873,6 @@ msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\utils\dates.py:29
 #: .\venv\Lib\site-packages\django\utils\dates.py:29
-#, fuzzy
-#| msgid "day"
-#| msgid_plural "days"
 msgid "May"
 msgstr "diena"
 
@@ -1926,8 +1893,6 @@ msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\utils\dates.py:33
 #: .\venv\Lib\site-packages\django\utils\dates.py:33
-#, fuzzy
-#| msgid "Member"
 msgid "September"
 msgstr "Narys"
 
@@ -1938,8 +1903,6 @@ msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\utils\dates.py:35
 #: .\venv\Lib\site-packages\django\utils\dates.py:35
-#, fuzzy
-#| msgid "Member"
 msgid "November"
 msgstr "Narys"
 
@@ -2193,7 +2156,7 @@ msgstr "valanda"
 
 #. Translators: This string is used as a separator between list elements
 #: .\venv\Lib\python3.12\site-packages\django\utils\text.py:289
-#: .\venv\Lib\python3.12\site-packages\django\utils\timesince.py:135
+#: .\venv\Lib\site-packages\django\utils\timesince.py:135
 #: .\venv\Lib\site-packages\django\utils\text.py:289
 #: .\venv\Lib\site-packages\django\utils\timesince.py:135
 #, fuzzy
@@ -2276,8 +2239,8 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\views\csrf.py:34
 #: .\venv\Lib\site-packages\django\views\csrf.py:34
 msgid ""
-"You are seeing this message because this HTTPS site requires a "Referer "
-"header" to be sent by your web browser, but none was sent. This header is "
+"You are seeing this message because this HTTPS site requires a \"Referer\" "
+"header\" to be sent by your web browser, but none was sent. This header is "
 "required for security reasons, to ensure that your browser is not being "
 "hijacked by third parties."
 msgstr ""
@@ -2285,17 +2248,17 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\views\csrf.py:40
 #: .\venv\Lib\site-packages\django\views\csrf.py:40
 msgid ""
-"If you have configured your browser to disable "Referer" headers, please re-"
-"enable them, at least for this site, or for HTTPS connections, or for "same-"
-"origin" requests."
+"If you have configured your browser to disable \"Referer\" headers, please re-"
+"enable them, at least for this site, or for HTTPS connections, or for \"same-"
+"origin\" requests."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\views\csrf.py:45
 #: .\venv\Lib\site-packages\django\views\csrf.py:45
 msgid ""
 "If you are using the <meta name=\"referrer\" content=\"no-referrer\"> tag or "
-"including the "Referrer-Policy: no-referrer" header, please remove them. The "
-"CSRF protection requires the "Referer" header to do strict referer checking. "
+"including the \"Referrer-Policy: no-referrer\" header, please remove them. The "
+"CSRF protection requires the \"Referer\" header to do strict referer checking. "
 "If you're concerned about privacy, use alternatives like <a "
 "rel=\"noreferrer\" …> for links to third-party sites."
 msgstr ""
@@ -2312,7 +2275,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\views\csrf.py:60
 msgid ""
 "If you have configured your browser to disable cookies, please re-enable "
-"them, at least for this site, or for "same-origin" requests."
+"them, at least for this site, or for \"same-origin\" requests."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\views\csrf.py:66
@@ -2368,7 +2331,7 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\views\generic\dates.py:692
 #: .\venv\Lib\site-packages\django\views\generic\dates.py:692
 #, python-format
-msgid "Invalid date string "%(datestr)s" given format "%(format)s""
+msgid "Invalid date string \"%(datestr)s\" given format \"%(format)s\""
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\views\generic\detail.py:56
@@ -2379,7 +2342,7 @@ msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\views\generic\list.py:70
 #: .\venv\Lib\site-packages\django\views\generic\list.py:70
-msgid "Page is not "last", nor can it be converted to an int."
+msgid "Page is not \"last\", nor can it be converted to an int."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\views\generic\list.py:77
@@ -2392,7 +2355,7 @@ msgstr ""
 #: .\venv\Lib\site-packages\django\views\generic\list.py:169
 #, python-format
 msgid "Empty list and "
-"%(class_name)s.allow_empty" is False."
+"\"%(class_name)s.allow_empty\" is False."
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\views\static.py:49
@@ -2403,8 +2366,7 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\django\views\static.py:51
 #: .\venv\Lib\site-packages\django\views\static.py:51
 #, python-format
-msgid ""
-"%(path)s" does not exist"
+msgid "\"%(path)s\" does not exist"
 msgstr ""
 
 #: .\venv\Lib\python3.12\site-packages\django\views\static.py:68
@@ -2480,118 +2442,13 @@ msgstr ""
 #: .\venv\Lib\python3.12\site-packages\jsonfield\forms.py:15
 #: .\venv\Lib\site-packages\jsonfield\forms.py:15
 #, python-format
-msgid ""
-"%(value)s" value must be valid JSON."
+msgid "\"%(value)s\" value must be valid JSON."
 msgstr ""
 
 #: .\venv\Lib\site-packages\_pytest\config\argparsing.py:474
 #, python-format
 msgid "ambiguous option: %(option)s could match %(matches)s"
 msgstr ""
-
-#~ msgid "Language"
-#~ msgstr "Kalba"
-
-# Column Types
-#~ msgid "To Do"
-#~ msgstr "Padaryti"
-
-#~ msgid "Doing"
-#~ msgstr "Vykdoma"
-
-#~ msgid "Done"
-#~ msgstr "Atlikta"
-
-#~ msgid "Rejected"
-#~ msgstr "Nukelta"
-
-#~ msgid "year"
-#~ msgid_plural "years"
-#~ msgstr[0] "metus"
-#~ msgstr[1] "metus"
-#~ msgstr[2] "metų"
-#~ msgstr[3] "metų"
-
-#~ msgid "month"
-#~ msgid_plural "months"
-#~ msgstr[0] "mėnesį"
-#~ msgstr[1] "mėnesius"
-#~ msgstr[2] "mėnesių"
-#~ msgstr[3] "mėnesių"
-
-#~ msgid "week"
-#~ msgid_plural "weeks"
-#~ msgstr[0] "savaitę"
-#~ msgstr[1] "savaites"
-#~ msgstr[2] "savaičių"
-#~ msgstr[3] "savaičių"
-
-#~ msgid "second"
-#~ msgid_plural "seconds"
-#~ msgstr[0] "sekundė"
-#~ msgstr[1] "sekundės"
-#~ msgstr[2] "sekundžių"
-#~ msgstr[3] "sekundžių"
-
-#~ msgid "All team members"
-#~ msgstr "Visi komandos nariai"
-
-#~ msgid "Manage team members"
-#~ msgstr "Valdyti komandos narius"
-
-#~ msgid "Team members"
-#~ msgstr "Komandos nariai"
-
-#~ msgid "Invite new member"
-#~ msgstr "Pakviesti naują narį"
-
-#~ msgid "Cancel invitation"
-#~ msgstr "Atšaukti pakvietimą"
-
-#~ msgid "Required field"
-#~ msgstr "Privalomas laukas"
-
-#~ msgid "Position"
-#~ msgstr "Pozicija"
-
-#~ msgid "week ago"
-#~ msgstr "savaitė"
-
-#~ msgid "weeks ago"
-#~ msgstr "savaitės"
-
-#~ msgid "month ago"
-#~ msgstr "mėnesis"
-
-#~ msgid "months ago"
-#~ msgstr "mėnesiai"
-
-#~ msgid "year ago"
-#~ msgstr "metai"
-
-#~ msgid "years ago"
-#~ msgstr "metai"
-
-#~ msgid "day ago"
-#~ msgstr "diena"
-
-#~ msgid "days ago"
-#~ msgstr "dienos"
-
-#~ msgid "hour ago"
-#~ msgstr "valanda"
-
-#~ msgid "hours ago"
-#~ msgstr "valandos"
-
-#~ msgid "minute ago"
-#~ msgstr "minutė"
-
-#~ msgid "second ago"
-#~ msgstr "sekundė"
-
-#~ msgid "seconds ago"
-#~ msgstr "sekundės"
 
 #~ msgid "just now"
 #~ msgstr "ką tik"
